--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,11 @@
 .App {
   text-align: center;
   width: 420px;
-  height: 855px;
-  margin-top: 99.5px;
+  height: 800px;
+  margin-top: 20px;
   margin-bottom: 99.5px;
   margin-left: auto;
   margin-right: auto;
   overflow: scroll;
+  overflow-x: hidden;
 }
